--- a/report1.tex
+++ b/report1.tex
@@ -1,7 +1,8 @@
 \documentclass[a4paper,12pt]{jarticle}
+\usepackage[dvipdfm]{graphicx}
 \usepackage{listings}
 \title{平成26年度 3回生後期学生実験エージェント \\ 課題１}
-\author{竹田創)}
+\author{竹田創}
 \date{提出日：\today  \\ }
 %%
 \makeatletter
@@ -46,7 +47,124 @@ g++-4.7 -Wall QuadProg++.cc SVM.cc
 \end{verbatim}
 
 \subsection{実行例}
+sample\_linear.datを解析した場合、つぎのように出力される。
+
 \begin{verbatim}
+alpha
+0	0.000000
+1	0.000000
+2	0.000000
+3	-0.000000
+4	-0.000000
+5	0.250937
+6	0.000000
+7	0.000000
+8	0.000000
+9	0.000000
+10	0.000000
+11	-0.000000
+12	0.000000
+13	0.000000
+14	0.000000
+15	0.000000
+16	0.000000
+17	-0.000000
+18	0.000000
+19	-0.000000
+20	0.000000
+21	0.000000
+22	-0.000000
+23	-0.000000
+24	0.249687
+25	0.000000
+26	-0.000000
+27	0.000000
+28	0.000000
+29	0.000000
+30	-0.000000
+31	-0.000000
+32	0.000000
+33	0.000000
+34	0.000000
+35	-0.000000
+36	-0.000000
+37	-0.000000
+38	-0.000000
+39	-0.000000
+40	0.001249
+41	0.000000
+42	0.000000
+43	-0.000000
+44	-0.000000
+45	-0.000000
+46	0.000000
+47	-0.000000
+48	-0.000000
+49	0.000000
+50	0.000000
+51	-0.000000
+52	-0.000000
+53	-0.000000
+54	-0.000000
+55	0.000000
+56	0.000000
+57	0.000000
+58	0.000000
+59	-0.000000
+60	0.000000
+61	-0.000000
+62	-0.000000
+63	0.000000
+64	0.000000
+65	0.000000
+66	-0.000000
+67	0.000000
+68	-0.000000
+69	0.000000
+70	-0.000000
+71	-0.000000
+72	-0.000000
+73	0.000000
+74	0.000000
+75	0.000000
+76	-0.000000
+77	-0.000000
+78	-0.000000
+79	-0.000000
+80	0.000000
+81	0.000000
+82	0.000000
+83	0.000000
+84	0.000000
+85	0.000000
+86	0.000000
+87	0.000000
+88	-0.000000
+89	-0.000000
+90	-0.000000
+91	0.000000
+92	-0.000000
+93	-0.000000
+94	0.000000
+95	0.000000
+96	0.000000
+97	-0.000000
+98	0.000000
+99	-0.000000
+weight[0]=0.530611
+weight[1]=-0.469388
+alpha_max_number5
+theta=-4.04082
+
+
+\end  {verbatim}
+
+
+
+sample\_circle.datをガウスカーネルで解析した場合、つぎのように出力される。
+\begin{verbatim}
+
+
 alpha
 0	0.000000
 1	-0.000000
@@ -157,30 +275,118 @@ theta=-2285.13
 サポートベクタマシンを実現するSVM.ccについて説明する。
 QuadProg++を利用して２次計画問題をとくため、G、CE、CI、g0、ce0、ci0に適切な値を代入する。
 CIは単位行列、CEは(y1 y2 y3 ..)という行列、ci0とce0は全ての成分が0のベクトル、g0は全ての成分が-1のベクトルである。行列GはG[i][j]がy[i]*y[j]*Kernel(xi,xj)の成分をもつ行列である。
+次に関数について説明する。
+\begin{itemize}
+ \item \begin{verbatim}　double norm\end{verbatim}
+   \begin{itemize}
+     \item ４つのdouble型の引数をとり、それは２つの点の座標を表す
+     \item　２つの点の距離の二乗を返す
+   \end{itemize}
+ \item \begin{verbatim}　double PolinomicalKernel\end{verbatim}
+\begin{itemize}
+     \item ４つのdouble型の引数をとり、それは２つの点の座標を表す
+     \item　多項式カーネルを計算する
+   \end{itemize}
+ \item \begin{verbatim}int read_data\end{verbatim}
+\begin{itemize}
+     \item 構造体を引数にとる
+     \item　指定したファイルのデータをよみこんで構造体に代入して返す
+   \end{itemize}
+ \item \begin{verbatim} void print_alpha\end{verbatim}
+\begin{itemize}
+     \item alphaの配列と、alphaの配列数を引数にとる。
+     \item　alphaの値を順番に出力する
+   \end{itemize}
+ \item \begin{verbatim} void print_theta\end{verbatim}
+\begin{itemize}
+     \item コマンドライン引数と、alphaの個数、構造体、重みを引数にとる
+     \item　コマンドライン引数に応じてカーネルを選びthetaを出力する
+   \end{itemize}
+ 
+\end{itemize}
+
+
+
+
+
+
+
+
+
 
 \section{評価結果}
-線形のデータはカーネルトリックなしのときと多項式カーネルのときでうまくとけていることが分かった。
-ガウスカーネルのgnuplotで出力がうまくいかなかった。
-\begin{figure}[tp]
-\includegraphics[scale=0.8]{linearNokernel.png}
 
-\caption{線形のデータをカーネルトリックなしで解析}
-\label{fig:sample}
-\end{figure}
+\begin{itemize}
+\item sample\_linear.datのデータを解析した評価結果
+
+\begin{itemize}
+     \item カーネルトリックなしの場合
+\begin{verbatim} 
+weight[0]=0.530611
+weight[1]=-0.469388
+alpha_max_number:5
+theta=-4.04082
+\end{verbatim}
+
+    \item　多項式カーネルの場合
+\begin{verbatim} 
+weight[0]=0.371174
+weight[1]=-0.363525
+alpha_max_number:40
+theta=4.89865
 
 
+\end{verbatim}
+     \item　ガウスカーネルの場合
+\begin{verbatim} 
+weight[0]=152.11
+weight[1]=-121.204
+alpha_max_number:5
+theta=1
 
-\begin{figure}[tp]
-\includegraphics[scale=0.8]{linearPolinomical.png}
+\end{verbatim}
+   \end{itemize}
 
-\caption{線形のデータを多項式カーネルで解析}
-\label{fig:sample}
-\end{figure}
+\item sample\_ciecle.datのデータを解析した評価結果
+
+\begin{itemize}
+   \item カーネルトリックなしの場合
+\begin{verbatim} 
+
+weight[0]=-0.00109041
+weight[1]=0.0047479
+alpha_max_number:20
+theta=-0.976828
+
+\end{verbatim}
+
+    \item　多項式カーネルの場合
+\begin{verbatim} 
+weight[0]=1.87848
+weight[1]=1.73443
+alpha_max_number:48
+theta=7120.85
+
+\end{verbatim}
+     \item　ガウスカーネルの場合
+\begin{verbatim} 
+weight[0]=12.9251
+weight[1]=-177.845
+alpha_max_number:48
+theta=-1
+
+\end{verbatim}
+   \end{itemize}
+ 
+    
+ 
+   \end{itemize}
+ 
 
 
 \section{考察}
-まだガウスカーネルの場合の描画ができていません。
-後日実装できしだい再提出します。
+gnuplotの使い方に苦労したが、線形と円形のサンプルデータは適切に学習させることができた。
+課題１に時間がかかってしまった。
 
 %%
 
